<resources>
    <string name="app_name">CarrotMarket</string>
    <string name="price"> 원</string>
    <string name="test">test</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <string name="report">신고하기</string>
    <string name="delete_product">중고거래 삭제하기</string>
    <string name="modify_product">중고거래 수정하기</string>
    <string name="user_hide">이 사용자의 글 보지 않기</string>
    <string name="X">X</string>
    <string name="user_nick_2">쪼꼬에몽</string>
    <string name="my_page_user_name">고양이</string>
    <string name="heart">관심</string>
    <string name="toast">인증번호가 문자로 전송됐습니다. (최대 20초 소요)</string>
    <string name="main_btm_nav_1_title">홈</string>
    <string name="main_btm_nav_2_title">동네생활</string>
    <string name="main_btm_nav_3_title">내 근처</string>
    <string name="main_btm_nav_4_title">채팅</string>
    <string name="main_btm_nav_5_title">나의 당근</string>
    <string name="login_start_txt_main">우리 동네 중고 직거래</string>
    <string name="login_start_txt_sub">당근마켓은 동네 직거래 마켓이에요.\n 내 동네를 설정하고 시작해보세요!</string>
    <string name="login_start_btn_title">내 동네 설정하고 시작하기</string>
    <string name="login_location_edit_hint">내 동네 이름(동,읍,면)으로 검색</string>
    <string name="login_location_btn_title">현재위치로 찾기</string>
    <string name="login_location_item_main">근처동네</string>
    <string name="login_location_item_sub">서울 광진구 화양제1동</string>
    <string name="login_main_top_txt">로그인</string>
    <string name="login_main_cert_txt">당근마켓은 휴대폰 번호로 가입해요. 번호는 안전하게 보관되며 어디에도 공개되지 않아요.</string>
    <string name="login_main_edt_id">아이디를 입력해주세요</string>
    <string name="login_main_edt_pwd">비밀번호를 입력해주세요</string>
    <string name="login_main_btn_login">로그인</string>
    <string name="sign_up_top_txt">프로필 설정</string>
    <string name="sign_up_edt_nickname">닉네임을 입력해주세요</string>
    <string name="sign_up_txt_guide">프로필 사진과 닉네임을 입력해주세요</string>
    <string name="sign_up_btn_title">다음</string>
    <string name="sign_up_main_top_txt">회원가입</string>
    <string name="sign_up_main_cert_txt">당근마켓은 휴대폰 번호로 가입해요. 번호는 안전하게 보관되며 어디에도 공개되지 않아요.</string>
    <string name="sign_up_main_edt_id">휴대폰 번호를 입력해주세요</string>
    <string name="sign_up_main_edt_pwd">인증번호를 입력해주세요</string>
    <string name="sign_up_main_btn_login">인증문자 받기</string>
    <string name="sign_up_main_modi_txt">전화번호가 변경되었나요?</string>
    <string name="sign_up_main_found_id">이메일로 계정찾기</string>
    <string name="sign_up_main_warn">어떤 경우에도 타인에게 공유하지 마세요!</string>
    <string name="sign_up_main_pw_confirm">인증번호 확인</string>
    <string name="home_cv_main_txt">따뜻한 거래를 시작해보세요!</string>
    <string name="home_cv_sub_txt">지금 동네인증을 하고 화양제1동 근처 이웃 398,042명과 거래하세요.</string>
    <string name="home_cv_btn_title">동네인증하고 시작하기</string>
    <string name="home_top_txt">화양제1동</string>
    <string name="home_fab_title_1">동네홍보</string>
    <string name="home_fab_title_2">중고거래</string>
    <string name="home_item_name">캉골 반팔티</string>
    <string name="home_item_location">화양제3동</string>
    <string name="home_item_time">1분 전</string>
    <string name="home_item_price">15,000</string>
    <string name="home_item_location_and_time"> · </string>
    <string name="product_detail_btm_price">7,000원</string>
    <string name="product_detail_btm_price_info">가격제안불가</string>
    <string name="product_detail_btm_btm_title">채팅으로 거래하기</string>
    <string name="product_detail_user_name">병진마눌</string>
    <string name="product_detail_user_location">하남시 망월동</string>
    <string name="product_detail_user_tem_txt">매너온도</string>
    <string name="product_detail_user_tem">44.4</string>
    <string name="product_detail_product_name">이케아 유아 책상</string>
    <string name="product_detail_cate">유아동</string>
    <string name="product_detail_time">54초 전</string>
    <string name="product_detail_contents">전체적으로 깨끗해요~~ 보시고 결정하셔도 돼요~</string>
    <string name="product_detail_views_txt">조회</string>
    <string name="product_detail_views">15</string>
    <string name="product_detail_ad">책상 옮기기 무거우시죠? 화양제1동 근처 용달 보기</string>
    <string name="product_detail_post_report">이 게시글 신고하기</string>
    <string name="product_detail_user_other">님의 판매상품</string>
    <string name="product_detail_user_other_more">모두보기</string>
    <string name="product_detail_user_other_name">스타벅스 랜턴</string>
    <string name="product_detail_user_other_price">13,000원</string>
    <string name="my_page_top">나의 당근</string>
    <string name="my_page_user_hash">#1231231</string>
    <string name="my_page_user_btn_title_profile">프로필 변경</string>
    <string name="my_page_sale_list">판매내역</string>
    <string name="my_page_pur_list">구매내역</string>
    <string name="my_page_like_list">관심목록</string>
    <string name="my_page_set_my_loca">내 동네 설정</string>
    <string name="my_page_auth_my_loca">동네 인증하기</string>
    <string name="my_page_keyword_noti">키워드 알림</string>
    <string name="my_page_all">모아보기</string>
    <string name="my_page_inter_cate">관심 카테고리 설정</string>
    <string name="my_page_buzz_profile_make">버즈프로필 만들기</string>
    <string name="my_page_write_loca">동네홍보 글</string>
    <string name="my_page_write_reply">동네홍보 댓글</string>
    <string name="my_page_ad_loca">지역광고</string>
    <string name="my_page_invite_friend">친구초대</string>
    <string name="my_page_share">당근마켓 공유</string>
    <string name="my_page_noti">공지사항</string>
    <string name="my_page_ask">자주 묻는 질문</string>
    <string name="my_page_app_setting">앱 설정</string>
    <string name="my_page_user_location">화양제1동</string>
    <string name="product_sale_list_top">판매내역</string>
    <string name="product_sale_list_ing">판매중</string>
    <string name="product_sale_list_comp">거래완료</string>
    <string name="product_sale_list_hide">숨김</string>
    <string name="product_sale_list_fragment_ing">판매중인 게시글이 없어요</string>
    <string name="product_sale_list_fragment_comp">거래완료 게시글이 없어요</string>
    <string name="product_sale_list_fragment_hide">숨기기 한 게시글이 없어요</string>
    <string name="product_sale_list_change_ing">예약중으로 변경</string>
    <string name="product_sale_list_change_comp">거래완료로 변경</string>
    <string name="product_write_top">중고거래 글쓰기</string>
    <string name="product_write_0">0</string>
    <string name="product_write_1">1</string>
    <string name="product_write_10">10</string>
    <string name="product_write_slash">/</string>
    <string name="product_write_title">제목</string>
    <string name="product_write_cate">카테고리</string>
    <string name="product_write_price">가격 (선택사항)</string>
    <string name="product_write_price_pro">가격제안 받기</string>
    <string name="product_write_contents">화양제1동에 올릴 게시글 내용을 작성해주세요. 가품 및 판매금지품목은 게시가 제한될 수 있어요.</string>
    <string name="product_write_ph">자주 쓰는 문구</string>
    <string name="product_write_set_loca">보여줄 동네 설정</string>
    <string name="home_category_top">카테고리</string>
    <string name="home_category_digital">디지털기기</string>
    <string name="home_category_popular">인기매물</string>
    <string name="home_category_household">생활가전</string>
    <string name="home_category_interior">가구/인테리어</string>
    <string name="home_category_child">유아동</string>
    <string name="home_category_living">생활/가공식품</string>
    <string name="home_category_child_book">유아도서</string>
    <string name="home_category_sports">스포츠/레저</string>
    <string name="home_category_women_part">여성잡화</string>
    <string name="home_category_women_clothes">여성의류</string>
    <string name="home_category_men_clothes">남성패션/잡화</string>
    <string name="home_category_game">게임/취미</string>
    <string name="home_category_beauty">뷰티/미용</string>
    <string name="home_category_dog">반려동물용품</string>
    <string name="home_category_book">도서/티켓/음반</string>
    <string name="home_category_plant">식물</string>
    <string name="home_category_et">기타 중고물품</string>
    <string name="home_category_buy">삽니다</string>
    <string name="users_setting_top">설정</string>
    <string name="users_setting_alarm_setting">알람 설정</string>
    <string name="users_setting_alarm_setting1">알람 및 소리</string>
    <string name="users_setting_alarm_setting2">방해금지 시간설정</string>
    <string name="users_setting_alarm_setting3">진동</string>
    <string name="users_setting_user_setting">사용자 설정</string>
    <string name="users_setting_user_setting1">계정 / 정보 관리</string>
    <string name="users_setting_user_setting2">모아보기 사용자관리</string>
    <string name="users_setting_user_setting3">차단사용자 관리</string>
    <string name="users_setting_user_setting4">게시글 미노출 사용자 관리</string>
    <string name="users_setting_user_setting5">기타 설정</string>
    <string name="users_setting_et">기타</string>
    <string name="users_setting_et1">언어 설정</string>
    <string name="users_setting_et2">앱 캐시 정리하기</string>
    <string name="users_setting_et3">오픈소스 라이선스</string>
    <string name="users_setting_et4">버전 6.2.5</string>
    <string name="users_setting_et5">로그아웃</string>
    <string name="users_setting_et6">탈퇴하기</string>
    <string-array name="write_cate">
        <item>디지털기기</item>
        <item>생활가전</item>
        <item>가구/인테리어</item>
        <item>유아동</item>
        <item>생활/가공식품</item>
        <item>유아도서</item>
        <item>스포츠/레저</item>
        <item>여성잡화</item>
        <item>여성의류</item>
        <item>남성패션/잡화</item>
        <item>게임/취미</item>
        <item>뷰티/미용</item>
        <item>반려동물용품</item>
        <item>도서/티켓/음반</item>
        <item>식물</item>
        <item>기타 중고물품</item>
        <item>삽니다</item>
    </string-array>
    <string-array name="write_cate2">
        <item>우리동네질문</item>
        <item>동네맛집</item>
        <item>동네소식</item>
        <item>분실/실종센터</item>
        <item>동네사건사고</item>
        <item>일상</item>
        <item>해주세요</item>
        <item>취미생활</item>
        <item>고양이</item>
        <item>강아지</item>
        <item>건강</item>
        <item>살림</item>
        <item>인테리어</item>
        <item>교육/학원</item>
        <item>동네사진전</item>
        <item>출산/육아</item>
        <item>기타</item>
    </string-array>
    <string name="home_search_more">더보기</string>
    <string name="home_search_et_hint">검색어를 입력하세요.</string>
    <string name="home_search_cate">카테고리</string>
    <string name="home_search_tab1">중고거래</string>
    <string name="home_search_tab2">동네정보</string>
    <string name="home_search_tab3">사람</string>
    <string name="home_search_popular">인기검색어</string>
    <string name="home_search_popular1">자전거</string>
    <string name="home_search_popular2">의자</string>
    <string name="home_search_popular3">냉장고</string>
    <string name="home_search_popular4">캠핑</string>
    <string name="home_search_popular5">노트북</string>
    <string name="home_search_popular6">에어컨</string>
    <string name="home_search_popular7">아이패드</string>
    <string name="home_search_popular8">애플워치</string>
    <string name="home_search_popular9">골프</string>
    <string name="home_search_popular10">모니터</string>
    <string name="home_search_popular11">식물</string>
    <string name="home_search_local">화양제1동</string>
    <string name="home_search_local_popular"> 인기매물</string>
    <string name="home_search_local_sug">추천 검색어</string>
    <string name="home_search_user_main">동네 이웃을 찾고있나요?</string>
    <string name="home_search_user_sub">• 닉네임으로 검색해보세요.</string>
    <string name="home_search_user_sub2">• 사용자 프로필의 닉네임 옆 #숫자로도 검색할 수 있어요.(예: 당근이 #10000)</string>
    <string name="life_top1">우리동네질문</string>
    <string name="life_top2">동네맛집</string>
    <string name="life_top3">동네소식</string>
    <string name="life_top4">분실/실종센터</string>
    <string name="life_top5">일상</string>
    <string name="life_top6">동네사건사고</string>
    <string name="life_btm1">궁금해요</string>
    <string name="life_btm2">댓글쓰기</string>
    <string name="community_top">동네생활 글쓰기</string>
    <string name="community_cate">게시글의 주제를 선택해주세요</string>
    <string name="community_alert">글 작성하기 전에 알려드려요.</string>
    <string name="community_alert_sub">중고거래 관련, 명예훼손 글은 올리실 수 없어요.\n또한, 광고/홍보 목적의 글은 동네 홍보 게시판은 이용해주세요.</string>
    <string name="community_hint">화양제1동 근처 이웃과 우리 동네 관련된 질문이나 이야기를 해보세요.</string>
    <string name="community_cert">동네생활 운영정책 보러가기</string>
</resources>