<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sug_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_search_local_sug"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="13dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sug_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular1"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular2"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular3"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular7"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular8"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular6"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular4"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular10"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular9"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>

    </com.google.android.material.chip.ChipGroup>




</androidx.constraintlayout.widget.ConstraintLayout>