<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/search_deal_ll"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_txt_cate"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_cate"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_rv"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/home_category_item"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_deal_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_deal_ll"
        android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividerColor"/>
    <TextView
        android:layout_marginVertical="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_search_more"
        android:textSize="15sp"
        android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/dividerColor"/>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:layout_constraintTop_toBottomOf="@id/search_deal_ll2"
    app:layout_constraintLeft_toLeftOf="parent"
    android:orientation="vertical"
    app:layout_constraintRight_toRightOf="parent"
    >
    <TextView
        android:id="@+id/sug_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_search_popular"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="13dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sug_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular1"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular2"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular3"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular7"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular8"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular6"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular4"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular10"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular9"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_popular11"
            app:chipBackgroundColor="@color/white"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/inactiveBtn"/>
    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/dividerColor"/>

</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/search_deal_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/home_item"/>



</androidx.constraintlayout.widget.ConstraintLayout>