<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginLeft="20dp"
        android:id="@+id/sale_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/item_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sale_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/sale_img"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sale_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:text="@string/home_item_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sale_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_item_location"
                android:textColor="@color/homeItemLocationAndTime"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="·"
                android:textColor="@color/homeItemLocationAndTime"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sale_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_item_time"
                android:textColor="@color/homeItemLocationAndTime"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_item_price"
            android:textColor="@color/black"
            android:textSize="14.5sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:layout_marginRight="20dp"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:src="@drawable/menu_d"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:weightSum="2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sale_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:visibility="visible"
            android:id="@+id/product_sale_list_change_ing"
            android:paddingVertical="10dp"
            android:background="@drawable/sale_btn"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/product_sale_list_change_ing"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:visibility="visible"
            android:id="@+id/product_sale_list_change_comp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:background="@drawable/sale_btn"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/product_sale_list_change_comp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"/>



    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>