<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/searchUserBack">

    <LinearLayout
        android:background="@color/searchUserBack"
        android:id="@+id/search_user_ll"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/test"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_search_user_main"
        android:textStyle="bold"
        />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_search_user_sub"
        />
    <TextView
        android:layout_marginHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_search_user_sub2"
        />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/search_user_rv"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/search_user_item"/>


</androidx.constraintlayout.widget.ConstraintLayout>